# inochi2d-c

./: .gitignore  CMakeLists.txt  main.cpp
